--- a/Web/src/app/Chat/financial-chat/financial-chat.component.html
+++ b/Web/src/app/Chat/financial-chat/financial-chat.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3 class="text-center chat_header">Fiancial Chat</h3>
+  <h3 class="text-center chat_header">Fiancial Chat JobSity</h3>
   <div class="messaging">
     <div class="inbox_msg">
       <div class="mesgs">
